--- a/StaffFreebies.html
+++ b/StaffFreebies.html
@@ -1,114 +1,138 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-<meta charset="UTF-8">
-<title>Kasir Scan QR</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Kasir Scan QR</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="https://unpkg.com/html5-qrcode"></script>
+  <script src="https://unpkg.com/html5-qrcode"></script>
 
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: #f7f7f7;
-  padding: 16px;
-}
-.box {
-  max-width: 420px;
-  margin: auto;
-  background: #fff;
-  padding: 18px;
-  border-radius: 12px;
-  box-shadow: 0 8px 20px rgba(0,0,0,.15);
-}
-h2 {
-  text-align: center;
-  margin-top: 0;
-}
-button {
-  width: 100%;
-  padding: 14px;
-  background: #e91e63;
-  color: #fff;
-  border: none;
-  border-radius: 8px;
-  font-size: 16px;
-  margin-top: 12px;
-  cursor: pointer;
-}
-#result {
-  margin-top: 16px;
-  font-size: 14px;
-}
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f7f7f7;
+      padding: 16px;
+    }
 
-.header-logo {
-  text-align: center;
-  margin-bottom: 12px;
-}
-.header-logo img {
-  max-width: 300px;
-  width: 100%;
-  height: auto;
-}
+    .box {
+      max-width: 420px;
+      margin: auto;
+      background: #fff;
+      padding: 18px;
+      border-radius: 12px;
+      box-shadow: 0 8px 20px rgba(0,0,0,.15);
+    }
 
-/* STATUS */
-.status {
-  font-size: 18px;
-  font-weight: bold;
-  margin-top: 12px;
-  padding: 10px;
-  border-radius: 8px;
-  text-align: center;
-}
-.status.ok { background:#e8f5e9; color:#2e7d32; }
-.status.info { background:#e3f2fd; color:#1565c0; }
-.status.no { background:#ffebee; color:#c62828; }
-.status.warn { background:#fff8e1; color:#f57f17; }
+    h2 {
+      text-align: center;
+      margin-top: 0;
+    }
 
-/* POPUP */
-.popup {
-  position: fixed;
-  inset: 0;
-  background: rgba(0,0,0,.5);
-  display: none;
-  align-items: center;
-  justify-content: center;
-}
-.popup-box {
-  background: #fff;
-  padding: 20px;
-  border-radius: 12px;
-  max-width: 320px;
-  text-align: center;
-}
-.popup-actions {
-  display: flex;
-  gap: 10px;
-  margin-top: 14px;
-}
-.popup-actions button {
-  width: 100%;
-}
+    button {
+      width: 100%;
+      padding: 14px;
+      background: #e91e63;
+      color: #fff;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      margin-top: 12px;
+      cursor: pointer;
+    }
 
-/* TOMBOL POPUP */
-.btn-yes {
-  background: #4caf50;
-}
-.btn-yes:hover {
-  background: #43a047;
-}
-.btn-no {
-  background: #e53935;
-}
-.btn-no:hover {
-  background: #d32f2f;
-}
-</style>
+    #result {
+      margin-top: 16px;
+      font-size: 14px;
+    }
+
+    .header-logo {
+      text-align: center;
+      margin-bottom: 12px;
+    }
+
+    .header-logo img {
+      max-width: 300px;
+      width: 100%;
+      height: auto;
+    }
+
+    .popup {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.5);
+      display: none;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .popup-box {
+      background: #fff;
+      padding: 20px;
+      border-radius: 12px;
+      max-width: 320px;
+      text-align: center;
+    }
+
+    .popup-box button {
+      width: 48%;
+    }
+
+    .status {
+      font-size: 18px;
+      font-weight: bold;
+      margin-top: 8px;
+      padding: 10px;
+      border-radius: 8px;
+    }
+
+    .status.ok {
+      background: #e8f5e9;
+      color: #2e7d32;
+    }
+
+    .status.info {
+      background: #e3f2fd;
+      color: #1565c0;
+    }
+
+    .status.no {
+      background: #ffebee;
+      color: #c62828;
+    }
+
+    .status.warn {
+      background: #fff8e1;
+      color: #f57f17;
+    }
+
+    .status.center {
+      text-align: center;
+    }
+
+    .quota {
+      margin-top: 10px;
+      padding: 10px;
+      border-radius: 8px;
+      font-size: 14px;
+      font-weight: bold;
+      background: #fff3e0;
+      color: #e65100;
+      text-align: center;
+    }
+
+    .big-btn {
+      font-size: 18px;
+      padding: 16px;
+      margin-top: 14px;
+      border-radius: 10px;
+    }
+  </style>
 </head>
 
 <body>
 
 <div class="box">
+
   <div class="header-logo">
     <img src="newheader-event.png" alt="Header Event">
   </div>
@@ -117,119 +141,160 @@ button {
 
   <div id="reader"></div>
   <div id="result"></div>
+
 </div>
 
-<!-- POPUP -->
 <div class="popup" id="popup">
   <div class="popup-box">
     <p id="popupText"></p>
-    <div class="popup-actions">
-      <button class="btn-yes" onclick="beriFreebies()">YA</button>
-      <button class="btn-no" onclick="tolakFreebies()">TIDAK</button>
-    </div>
+    <button onclick="beriFreebies()">YA</button>
+    <button onclick="tolakFreebies()">TIDAK</button>
   </div>
 </div>
 
 <script>
-const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzpTWQwrtj7CE6-oXVxls6Mh-UlxPMEN5CJpdzsaYikYzQXWPN9SGBhA17fusMAW9Nb2g/exec";
+  const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbzpTWQwrtj7CE6-oXVxls6Mh-UlxPMEN5CJpdzsaYikYzQXWPN9SGBhA17fusMAW9Nb2g/exec";
 
-let lastData = {};
-let sudahScan = false;
+  let lastData = {};
+  let sudahScan = false;
 
-// START CAMERA
-const qr = new Html5Qrcode("reader");
-qr.start(
-  { facingMode: "environment" },
-  { fps: 10, qrbox: 220 },
-  onScanSuccess
-);
+  const qr = new Html5Qrcode("reader");
 
-function onScanSuccess(text) {
-  if (sudahScan) return;
-  sudahScan = true;
-  qr.stop();
+  qr.start(
+    { facingMode: "environment" },
+    { fps: 10, qrbox: 220 },
+    text => {
+      if (sudahScan) return;
+      sudahScan = true;
 
-  const parts = text.trim().split(/\s+/);
-  const wa = parts.pop();
-  const nama = parts.join(" ");
+      qr.stop();
 
-  prosesScan(nama, wa);
-}
+      const parts = text.trim().split(/\s+/);
+      const wa = parts.pop();
+      const nama = parts.join(" ");
 
-// ===============================
-// PROSES SCAN
-// ===============================
-function prosesScan(nama, wa) {
-  const fd = new FormData();
-  fd.append("nama", nama);
-  fd.append("wa", wa);
+      prosesScan(nama, wa);
+    }
+  );
 
-  fetch(WEBAPP_URL, { method:"POST", body: fd })
-    .then(r => r.json())
-    .then(res => {
-      lastData = res;
+  function prosesScan(nama, wa) {
+    const fd = new FormData();
+    fd.append("nama", nama);
+    fd.append("wa", wa);
 
-      let statusHTML = "";
+    fetch(WEBAPP_URL, { method: "POST", body: fd })
+      .then(r => r.json())
+      .then(res => {
+        lastData = res;
 
-      if (res.status === "BOLEH_DAPAT") {
-        statusHTML = `<div class="status ok">🎁 Dapat Freebies</div>`;
-      }
-      else if (res.status === "SUDAH_PERNAH") {
-        statusHTML = `<div class="status info">ℹ️ Sudah Pernah Dapat Freebies</div>`;
-      }
-      else if (res.status === "KUOTA_HABIS") {
-        statusHTML = `<div class="status warn">⛔ Kuota Freebies Habis</div>`;
-      }
-      else {
-        statusHTML = `<div class="status no">❌ Tidak Dapat Freebies</div>`;
-      }
+        let statusText = "";
+        let statusClass = "";
+
+        if (res.status === "BOLEH_DAPAT") {
+          statusText = "🎁 Dapat Freebies";
+          statusClass = "ok";
+        } else if (res.status === "SUDAH_PERNAH") {
+          const waktu = res.lastFreebiesDate
+            ? `<br><small>Di Tanggal: ${res.lastFreebiesDate}</small>`
+            : "";
+          statusText = `ℹ️ Sudah Pernah Dapat Freebies${waktu}`;
+          statusClass = "info";
+        } else if (res.status === "KUOTA_HABIS") {
+          statusText = "⛔ Kuota Freebies Habis";
+          statusClass = "warn";
+        } else {
+          statusText = "❌ Tidak Dapat Freebies";
+          statusClass = "no";
+        }
+
+        document.getElementById("result").innerHTML = `
+          <div><b>Nama :</b> ${res.nama}</div>
+          <div><b>No. WA :</b> ${res.wa}</div>
+          <div><b>Kunjungan ke :</b> ${res.totalKunjungan}</div>
+
+          <hr style="margin:10px 0">
+
+          <div><b>Jumlah Customer Hari Ini :</b> ${res.jumlahCustomerHariIni ?? "-"}</div>
+
+          <div class="status ${statusClass}">
+            ${statusText}
+          </div>
+
+          <button class="big-btn" onclick="scanUlang()">
+            Scan Customer Berikutnya
+          </button>
+        `;
+
+        if (res.popup === "KONFIRMASI") {
+          document.getElementById("popupText").innerText =
+            "Customer ini memenuhi syarat mendapatkan freebies?";
+          document.getElementById("popup").style.display = "flex";
+        }
+      });
+  }
+
+  function beriFreebies() {
+    const fd = new FormData();
+    fd.append("nama", lastData.nama);
+    fd.append("wa", lastData.wa);
+
+    fetch(WEBAPP_URL + "?action=beriFreebies", {
+      method: "POST",
+      body: fd
+    }).then(() => {
+      document.getElementById("popup").style.display = "none";
+
+      const sisa = Math.max(0, 100 - ((lastData.freebiesHariIni || 0) + 1));
 
       document.getElementById("result").innerHTML = `
-        <div><b>Nama :</b> ${res.nama}</div>
-        <div><b>No. WA :</b> ${res.wa}</div>
-        <div><b>Kunjungan ke :</b> ${res.totalKunjungan}</div>
-        <hr>
-        ${statusHTML}
-        <button onclick="scanUlang()">Scan Customer Berikutnya</button>
+        <div><b>Nama :</b> ${lastData.nama}</div>
+        <div><b>No. WA :</b> ${lastData.wa}</div>
+        <div><b>Kunjungan ke :</b> ${lastData.totalKunjungan}</div>
+
+        <hr style="margin:10px 0">
+
+        <div><b>Jumlah Customer Hari Ini :</b> ${lastData.jumlahCustomerHariIni ?? "-"}</div>
+
+        <div class="status ok center">
+          🎁 FREEBIES DIBERIKAN
+        </div>
+
+        <div class="quota">
+          🎁 Sisa freebies hari ini: ${sisa}
+        </div>
+
+        <button class="big-btn" onclick="scanUlang()">
+          Scan Customer Berikutnya
+        </button>
       `;
-
-      if (res.popup === "KONFIRMASI") {
-        document.getElementById("popupText").innerText =
-          "Customer ini memenuhi syarat mendapatkan freebies?";
-        document.getElementById("popup").style.display = "flex";
-      }
     });
-}
+  }
 
-// ===============================
-// POPUP ACTION
-// ===============================
-function beriFreebies() {
-  const fd = new FormData();
-  fd.append("nama", lastData.nama);
-  fd.append("wa", lastData.wa);
-
-  fetch(WEBAPP_URL + "?action=beriFreebies", {
-    method:"POST",
-    body: fd
-  }).then(() => {
+  function tolakFreebies() {
     document.getElementById("popup").style.display = "none";
-    document.getElementById("result").innerHTML += `
-      <div class="status ok">🎁 FREEBIES DIBERIKAN</div>
+
+    document.getElementById("result").innerHTML = `
+      <div><b>Nama :</b> ${lastData.nama}</div>
+      <div><b>No. WA :</b> ${lastData.wa}</div>
+      <div><b>Kunjungan ke :</b> ${lastData.totalKunjungan}</div>
+
+      <hr style="margin:10px 0">
+
+      <div><b>Jumlah Customer Hari Ini :</b> ${lastData.jumlahCustomerHariIni ?? "-"}</div>
+
+      <div class="status no center">
+        ❌ FREEBIES TIDAK DIBERIKAN
+      </div>
+
+      <button class="big-btn" onclick="scanUlang()">
+        Scan Customer Berikutnya
+      </button>
     `;
-  });
-}
+  }
 
-function tolakFreebies() {
-  document.getElementById("popup").style.display = "none";
-  document.getElementById("result").innerHTML += `
-    <div class="status no">❌ FREEBIES TIDAK DIBERIKAN</div>
-  `;
-}
-
-function scanUlang() {
-  location.reload();
-}
+  function scanUlang() {
+    location.reload();
+  }
 </script>
 
 </body>
